Add link previews in open graph protocol

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,12 @@
   <head>
     <title>לילי - מארזים שאוהבים</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="og:title" content="לילי - מארזים שאוהבים">
+    <meta name="og:description" content="מתנות מיוחדות לראש השנה מארזים שבם אני משלבת כלי מטבח יפים ושימושיים, מגבות מטבח יפיפיות וסופר איכותיות עם מוצרי מזון מהמובחרים ביותר. תוספת של עציצי התבלין מוסיפה למארזים רעננות ויופי. הכל מסודר בהרמוניה נהדרת ומרהיבה.
+    המארזים מתאימים לכל אירוע ולכל בית.">
+    <meta name="og:type" content="website">
+    <meta name="og:image" content="https://lilypacks.com/img/banner.jpg">
+    <meta name="og:url" content="https://lilypacks.com">
   </head>
   <body>
     <div id="root"></div>
