--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <meta name="og:description" content="מתנות מיוחדות לראש השנה מארזים שבם אני משלבת כלי מטבח יפים ושימושיים, מגבות מטבח יפיפיות וסופר איכותיות עם מוצרי מזון מהמובחרים ביותר. תוספת של עציצי התבלין מוסיפה למארזים רעננות ויופי. הכל מסודר בהרמוניה נהדרת ומרהיבה.
     המארזים מתאימים לכל אירוע ולכל בית.">
     <meta name="og:type" content="website">
-    <meta name="og:image" content="https://lilypacks.com/img/banner.jpg">
-    <meta name="og:url" content="https://lilypacks.com">
+    <meta name="og:image" content="https://www.lilypacks.com/img/banner.jpg">
+    <meta name="og:url" content="https://www.lilypacks.com">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
