--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
   <head>
     <title>לילי - מארזים שאוהבים</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="og:title" content="לילי - מארזים שאוהבים">
-    <meta name="og:description" content="מתנות מיוחדות לראש השנה מארזים שבם אני משלבת כלי מטבח יפים ושימושיים, מגבות מטבח יפיפיות וסופר איכותיות עם מוצרי מזון מהמובחרים ביותר. תוספת של עציצי התבלין מוסיפה למארזים רעננות ויופי. הכל מסודר בהרמוניה נהדרת ומרהיבה.
+    <meta property="og:title" content="לילי - מארזים שאוהבים">
+    <meta property="og:description" content="מתנות מיוחדות לראש השנה מארזים שבם אני משלבת כלי מטבח יפים ושימושיים, מגבות מטבח יפיפיות וסופר איכותיות עם מוצרי מזון מהמובחרים ביותר. תוספת של עציצי התבלין מוסיפה למארזים רעננות ויופי. הכל מסודר בהרמוניה נהדרת ומרהיבה.
     המארזים מתאימים לכל אירוע ולכל בית.">
-    <meta name="og:type" content="website">
+    <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.lilypacks.com/img/banner.jpg">
-    <meta name="og:url" content="https://www.lilypacks.com">
+    <meta property="og:url" content="https://www.lilypacks.com">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
